[FEATURE](/): Prepare enviroment to run JavaFX applications
	`pom.xml`: Add necessary plugins and dependencies for running JavaFX apps
	`run.sh`: Convenience script for building and running the Kanban app

[FEATURE](/code/ui): `App` class holds basic logic for running a JavaFX app

	When run, the `App` class now creates and displays a simple (empty) JavaFX
	scene

--- a/pom.xml
+++ b/pom.xml
@@ -13,20 +13,24 @@
 		
 		<plugins>
 			<plugin>
-				<groupId> org.apache.maven.plugins </groupId>
-				<artifactId> maven-jar-plugin </artifactId>
-				<version> 2.1 </version>
+				<groupId> org.openjfx </groupId>
+				<artifactId> javafx-maven-plugin </artifactId>
+				<version> 0.0.8 </version>
 				
 				<configuration>
-					<archive>
-						<manifest>
-							<mainClass> kanban.ui.App </mainClass>
-						</manifest>
-					</archive>
+					<mainClass> kanban.ui.App </mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+	
+	<dependencies>
+		<dependency>
+			<groupId> org.openjfx </groupId>
+			<artifactId> javafx-controls </artifactId>
+			<version> 22 </version>
+		</dependency>
+	</dependencies>
 	
 	<properties>
 		<maven.compiler.source> 21 </maven.compiler.source>
