[FEATURE](/): Add support for FXML through `pom.xml` file
[FEATURE](/code): Implement code for displaying a sample GUI using FXML

	Currently there's no significant program logic, it just displays the UI.

[FEATURE](/docs): Minor `overview` diagram refactor and add the image
taken as reference for the project

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,12 @@
 		<sourceDirectory> ./code </sourceDirectory>
 		<outputDirectory> ./exec/classes </outputDirectory>
 		
+		<resources>
+			<resource>
+				<directory> ./code/kanban/view </directory>
+			</resource>
+		</resources>
+		
 		<plugins>
 			<plugin>
 				<groupId> org.openjfx </groupId>
@@ -30,9 +36,17 @@
 			<artifactId> javafx-controls </artifactId>
 			<version> 22 </version>
 		</dependency>
+		
+		<dependency>
+			<groupId> org.openjfx </groupId>
+			<artifactId> javafx-fxml </artifactId>
+			<version> 22 </version>
+		</dependency>
 	</dependencies>
 	
 	<properties>
+		<javafx.version> 22 </javafx.version>
+		
 		<maven.compiler.source> 21 </maven.compiler.source>
 		<maven.compiler.target> 21 </maven.compiler.target>
 	</properties>
