--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 				<version> 0.0.8 </version>
 				
 				<configuration>
-					<mainClass> kanban.ui.App </mainClass>
+					<mainClass> kanban.App </mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
